# Automated-Testing-Demo

./: requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
tests/: test_generic.py
