[metadata]
name = ProjectName
description = Project Description
author = CryptoFI
license = None
license_file = None
platforms = unix, linux, osx, cygwin, win32
classifiers =
	Programming Language :: Python :: 3.9

[options]
packages =
	generic
install_requires =
	requests>=2
python_requires = >=3.6
package_dir =
	=blueprints
zip_safe = no

[options.extras_require]
testing =
	pytest>=6.0
	pytest-cov>=2.0
	mypy>=0.910
	flake8>=3.9
	tox>=3.24

[options.package_data]
generic = py.typed

[flake8]
max-line-length = 160